some contrast fixes

--- a/src/modules/callToActionStyle.module.css
+++ b/src/modules/callToActionStyle.module.css
@@ -18,8 +18,8 @@
 }
 
 #callToAction span {
-    color: var(--attention-color);
-    font-weight: bolder;
+    color: var(--text-color);
+    font-weight: 700;
 }
 
 #ctaImg {
